Even more fixes to dark mode

--- a/src/assets/css/dark-mode.styl
+++ b/src/assets/css/dark-mode.styl
@@ -24,3 +24,8 @@
 
     pre
         background-color codeDark
+
+    .post-date,
+    .post-author,
+    .post-tag
+        color #fff
