--- a/src/assets/css/post.styl
+++ b/src/assets/css/post.styl
@@ -23,13 +23,22 @@
 .post-date
     background-image url(/images/date.svg)
 
+    @media (prefers-color-scheme: dark)
+        background-image url(/images/date-white.svg)
+
 .post-author
     background-image url(/images/sound.svg)
     background-size auto 22px
     padding-left 25px
 
+    @media (prefers-color-scheme: dark)
+        background-image url(/images/sound-white.svg)
+
 .post-tag
     background-image url(/images/tag.svg)
+
+    @media (prefers-color-scheme: dark)
+        background-image url(/images/tag-white.svg)
 
 .post-text
     max-width 750px
